--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h4 style="    font-family: Verdana, Geneva, Tahoma, sans-serif;">Discover Your Places</h4>
         <h1 style="font-size: 70px;">Explore the <br>Best <b>Beautiful Beaches</b></h1><div id="btn">
         <button>Explore</button>
-        </div>
+       </div>
     </header>
 </div>
 <div id="info">
@@ -41,14 +41,70 @@
 
 <div id="info2">
     <div id="info2-1">
-    <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 102, 133); text-align: center;">Discover the most
+    <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 102, 133); text-align: center; padding-right: 60px;">Discover the most
         attractive places</h2>
-        <div id="img">
+        <div id="img3">
             <img id="img2" src="about1.jpg" alt="about image" style="width: 90%;height: 450px; padding-top: 20px;">
             <img id="img2" src="about2.jpg" alt="about another">
             <img id="img2" src="about1.jpg" alt="about image1" style="width: 90%;height: 450px; padding-top: 20px;">
         </div>
     </div>
 </div>
+
+<div id="info3">
+    <div id="exp1">
+        <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 102, 133); text-align: center; padding-right: 60px;">With Our Experience <br>
+            We Will Serve You</h2>
+    </div>
+    <div id="exp3" >
+    <div id="exp2"><b id="b1">20</b><br><h3>Years Experience</h3></div>
+    <div id="exp2"><b id="b1">75</b><h3>Complete tours</h3></div>
+    <div id="exp2"><b id="b1">650+</b><h3>Tourist Destination</h3></div>
+    </div>
+    <div id="exp-img">
+    <img id="expp" src="experience1.jpg" alt="exp1">
+    <img id="expp" src="experience2.jpg" alt="exp2" style="height: 300px;width: 200px;">
+    </div>
+
+    <div id="vid">
+        <div id="vid1">
+            <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 102, 133); text-align: center; padding-right: 60px;">Video Tour</h2>
+            <p>Find out more with our video of the most beautiful and pleasant places for you and your family.</p>
+        </div>
+        <div id="vid2">
+            <iframe src="video.mp4" frameborder="0" autoplay mute></iframe>
+        </div>
+    </div>
+</div>
+
+<footer>
+    <div id="footdet">
+        <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 176, 230); text-align: center; padding-right: 60px;">Travel</h2>
+    <p id="p">
+        Travel you choose the
+destination, we offer you the
+experience.
+    </p></div>
+
+    <div id="footdet"><h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 176, 230); text-align: center; padding-right: 60px;">Travel</h2>
+        <p id="p">
+            About us <br>
+            Features <br>
+            New Blog <br>
+        </p></div>
+    <div id="footdet"> <h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 176, 230); text-align: center; padding-right: 60px;">Company</h2>
+        <p id="p">
+            Team <br>
+            Plan y Pricing <br>
+            Become a member<br>
+        </p></div>
+        <div id="footdet"><h2 style="font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif; color: rgb(0, 176, 230); text-align: center; padding-right: 60px;">Support</h2>
+            <p id="p">
+                FAQs <br>
+                Support Center <br>
+                Contact Us <br>
+            </p></div>
+
+</footer>
 </body>
 </html>
